--- a/assets/main.css
+++ b/assets/main.css
@@ -1,10 +1,13 @@
 @charset "UTF-8";
-
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
+html {
+    font-size: 62.5%;
+}
 
 body {
     margin: 0;
-    font-size: 1.15em;
+    font-size: 1.8rem;
     color: #141414;
     font-family: 'Roboto', sans-serif;
 }
@@ -37,20 +40,18 @@ footer a {
 }
 
 footer h3 {
-    font-size: 1.25em;
-    text-align: left;
+    font-size: 2.4rem;
+    text-align: center;
 }
 
-h1 {
-    font-size: 30px;
+footer img {
+    margin-bottom: 1em;
 }
 
-h2 {
-    font-size: 26px;
-}
-
-h3 {
-    font-size: 22px;
+.flogo {
+    width: 50%;
+    margin: 1.8rem auto;
+    text-align: center;
 }
 
 h1, h2, h3 {
@@ -59,6 +60,33 @@ h1, h2, h3 {
 
 h1 > span {
     text-shadow: 0px 5px 10px #e94f37;
+}
+
+h1 {
+    margin: 1.8rem 0;
+    font-size: 3.0rem;
+}
+
+h2 {
+    margin: 1.8rem 0;
+    font-size: 2.6rem;
+}
+
+h3 {
+    margin: 1.8rem 0;
+    font-size: 2.4rem;
+}
+
+p {
+    margin: 1.8rem 0;
+}
+
+i.first {
+    display: block;
+    text-align: center;
+    text-decoration: underline;
+    font-size: 1.4rem;
+    margin: 1.4rem 0;
 }
 
 img {
@@ -70,9 +98,9 @@ img {
 a.btn {
     padding: 10px;
     border-radius: 25px;
-    font-size: 1.25em;
+    font-size: 2.2rem;
     font-weight: 700;
-    margin: 1em 0 1em 0;
+    margin: 1.8rem 0 1.8rem 0;
     box-shadow: 0px 5px 10px #14141450;
     text-shadow: 0px 2px 2px #2f5220;
     background-image: linear-gradient(#6AB547, #71BA4F, #4D8433);
@@ -83,23 +111,23 @@ a.btn {
 }
 
 a.btn > span#subprincipal {
-    font-size: 0.8em;
+    font-size: 1.8rem;
     font-weight: 400;
     font-style: italic;
     text-shadow: 0px 2px 2px #2f5220;
 }
 
 a.btn > span#principal {
-    font-size: 1.25em;
+    font-size: 2.8rem;
     text-shadow: 0px 2px 2px #2f5220;
 }
 
 a.btnwpp {
     display: block;
-    margin: 1.8rem 0 2.2rem 0;
+    margin: 0 auto 2.2rem auto;
     width: 75%;
     padding: 10px 0 10px 0;
-    font-size: 1.2em;
+    font-size: 2.2rem;
     font-weight: bold;
     text-align: center;
     text-decoration: none;
@@ -149,6 +177,12 @@ img#ofert {
     box-shadow: 0px 5px 10px #999999;
 }
 
+img#comofunciona {
+    border-radius: 15px;
+    border: 4px solid #E94F37;
+    box-shadow: 0px 5px 10px #003452; 
+}
+
 div.video {
     margin-top: -1em;
     margin-bottom: 1.4em;
@@ -162,7 +196,11 @@ div.video > iframe {
     position: absolute;
 }
 
-p#institutional {
+p a {
+    color: #005281;
+}
+
+p.institutional {
     font-size: 14px;
     text-align: center;
 }
@@ -171,10 +209,71 @@ p.tcenter {
     text-align: center;
 }
 
+p.p14 {
+    font-size: 14px;
+}
+
+p.p14 a {
+    font-weight: bold;
+    color: #FFFFFF !important;
+}
+
+.mt18 {
+    margin: 1.8rem 0 0 0;
+}
+
 .mt0 {
     margin-top: 0;
 }
 
 .mb0 {
     margin-bottom: 0;
+}
+
+/* + Depoimentos */
+
+.product-category {
+    padding: 0 10vw;
+    font-size: 30px;
+    font-weight: 500;
+    margin-bottom: 40px;
+    text-transform: capitalize;
+}
+
+.image-slider {
+    display: flex;
+    overflow-x: auto;
+    scroll-behavior: smooth;
+}
+
+.image-slider::-webkit-scrollbar {
+    display: none;
+}
+
+.card-slider {
+    flex: 0 0 auto;
+    width: 250px;
+    height: 450px;
+    margin-right: 40px;
+}
+
+.slider-image {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+
+}
+
+.thumb {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 15px;
+}
+
+@media (min-width: 500px) {
+    div#more-depoiments {
+        display: none;
+    }
 }
