--- a/assets/main.css
+++ b/assets/main.css
@@ -144,6 +144,10 @@ div#ofert .white {
     text-shadow: 0px 0px 20px #FFFFFF;
 }
 
+div#ofert .red {
+    text-shadow: 0px 0px 20px #BB0A21;
+}
+
 .product-card {
     margin: 2rem auto;
     color: #FFFFFF;
@@ -151,15 +155,15 @@ div#ofert .white {
 
 .product-card-title {
     padding: 1.5rem;
+    text-shadow: 0px 2px 4px #003052;
     background-color: #0A9DFF;
     border-radius: 15px 15px 0 0;
-    text-shadow: 0px 2px 4px #003D66;
 }
 
 .product-card-body {
     padding: 1.5rem;
     border: 2px #0A9DFF solid;
-    border-radius: 0 0 15px 15px;
+    border-radius: 15px 15px;
 }
 
 .product-card-body p {
@@ -192,6 +196,20 @@ div#ofert .white {
     border-radius: 15px;
     text-align: center;
 }
+
+.shipping {
+    margin: -1rem auto 2rem auto;
+    width: 60%;
+    padding: 0.7rem;
+    font-size: 1.6rem;
+    font-weight: bold;
+    color: #0cce2c;
+    border: 1px #0cce2c solid;
+    border-radius: 15px;
+    text-align: center;
+    box-shadow: 0px 0px 5px #0cce2c;
+}
+
 
 /* font configuration */
 
@@ -325,6 +343,10 @@ img.btn-selo2 {
     margin-bottom: 0;
 }
 
+.mb18 {
+    margin-bottom: 1.8rem;
+}
+
 @media (max-width: 450px) {
     div#bg-01 {
         background-image: url(media/bg-01.webp);
@@ -353,4 +375,26 @@ img.btn-selo2 {
         background-repeat: no-repeat;
         background-size: cover;
     }
+}
+
+/* perguntas frequentes */
+
+details p {
+    margin: 1rem 4.2rem 2rem 4.2rem;
+}
+
+details a {
+    font-weight: bold;
+    color: #0A9DFF;
+}
+
+summary {
+    margin: 0.5rem auto;
+    padding: 1.5rem;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 2.4rem;
+    font-weight: bold;
+    background-color: #000C14;
+    border: 1px #0A9DFF solid;
+    border-radius: 15px;
 }
